# password-generator

./: .gitignore  README.MD  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
password_generator/: consts.py  flags.py  main.py
src/: flags.py  generator.py  main.py
tests/: test_generator.py
