[tool.poetry]
name = "password-generator"
version = "1.0.0"
description = ""
authors = ["c1m50c <58411864+c1m50c@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyperclip = "^1.8.2"
qrcode = "^7.3.1"
rich = "^12.5.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.14.4"
mypy = "^0.961"

[tool.poetry.scripts]
generate = "password_generator.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
